Fix overflow-x for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@ body {
   overflow-x: hidden; /* Prevent horizontal scrolling from our hamburger menu. */
  }
 
+.overflow-fix {
+  overflow-x: hidden;
+}
+
 img {
   max-width: 100%;
 }
